feat: add preview

--- a/src/components/modals/videoplayer/style.scss
+++ b/src/components/modals/videoplayer/style.scss
@@ -9,7 +9,6 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  // z-index: 10;
   background-color: black;
 }
 
@@ -30,9 +29,7 @@
   background-image: url(../../assets/icons/close.svg);
 }
 
-
 .controls {
-  // height: 60px;
   width: 100%;
   position: absolute;
   bottom: 0;
@@ -48,14 +45,24 @@
     cursor: pointer;
     position: relative;
 
-    &::before {
+    &::before,
+    &::after {
       content: "";
       position: absolute;
       left: 0;
       top: 0;
       bottom: 0;
-      right: calc(100% - var(--timeline-position));
+    }
+
+    &::before {
       background-color: orange;
+      right: calc(100% - var(--timeline-position));
+      z-index: 1;
+    }
+
+    &::after {
+      background-color: white;
+      right: calc(100% - var(--timeline-preview));
     }
 
     &:hover {
@@ -73,8 +80,9 @@
       border-radius: 50%;
       background-color: orange;
       position: absolute;
-      left: var(--indicator-position);
+      left: var(--timeline-position);
       transform: translate(-50%, -33%);
+      z-index: 1;
     }
 
     &-time {
@@ -85,6 +93,14 @@
       font-size: 20px;
       font-weight: 500;
       margin-bottom: 20px;
+    }
+
+    &-preview-img {
+      height: 50px;
+      position: absolute;
+      top: -80px;
+      left: calc(var(--timeline-preview) - 40px);
+      // display: none;
     }
   }
 
@@ -98,8 +114,6 @@
       display: flex;
     }
   }
-
-
 
   &-btn {
     height: 32px;
