feat: footer import

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,6 +1,7 @@
 @import "./baseStyles/normalize.css";
 @import "./baseStyles/variables";
 @import "./templates/header/header";
+@import "templates/footer/footer";
 
 body {
   font: $main-font;
