--- a/src/templates/header/_header.scss
+++ b/src/templates/header/_header.scss
@@ -11,7 +11,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 50px;
+  height: $header-size;
 }
 
 .logo {
