fix: main sections

--- a/src/style.scss
+++ b/src/style.scss
@@ -26,6 +26,10 @@ body {
 }
 
 .wrapper {
+  @include content-container;
   min-height: calc(100vh - 35px);
+  display: flex;
+  gap: 10px;
+  padding-top: $header-size;
 }
 
