feat: add news styles

--- a/src/templates/main/_news.scss
+++ b/src/templates/main/_news.scss
@@ -1,5 +1,5 @@
 .news {
-  flex-grow: 1;
+  max-width: 300px;
 }
 .title {
   display: flex;
@@ -15,3 +15,18 @@
     margin: 0;
   }
 }
+
+.news-item {
+  &__photo {
+    width: 100%;
+  }
+  &__text {
+    text-align: justify;
+  }
+  &__date {
+    font-size: 12px;
+    color: $accent-color;
+  }
+}
+
+
