--- a/src/baseStyles/_variables.scss
+++ b/src/baseStyles/_variables.scss
@@ -5,7 +5,7 @@ $rating: #ffc400;
 $light-title: white;
 $dark-text: #252525;
 $light-dark-text: #9b9b9b;
-$accent-color: #6dcdff;
+$accent-color: #5ac2f1;
 
 //fonts
 $main-font: 400 16px 'Raleway', sans-serif;
@@ -25,5 +25,11 @@ $border-radius: 7px;
   color: $light-title;
   font: $title-font;
   font-size: 26px;
+  text-transform: uppercase;
+}
+@mixin subtitle {
+  color: $title-background;
+  font: $title-font;
+  font-size: 19px;
   text-transform: uppercase;
 }
