--- a/src/templates/header/_header.scss
+++ b/src/templates/header/_header.scss
@@ -1,6 +1,7 @@
 .header-container {
   width: 100%;
   height: 50px;
+  background-color: white;
   box-shadow: 0 7px 12px 0 rgba(121, 121, 121, 0.6);
   -webkit-box-shadow: 0 7px 12px 0 rgba(121, 121, 121, 0.6);
   -moz-box-shadow: 0 7px 12px 0 rgba(121, 121, 121, 0.6);
