--- a/src/style.scss
+++ b/src/style.scss
@@ -3,6 +3,7 @@
 @import "./templates/header/header";
 @import "templates/main/news/news";
 @import "./templates/main/films/films";
+@import "./templates/main/filmPage/filmPage";
 @import "./templates/footer/footer";
 
 
