--- a/src/templates/main/filmPage/_filmPage.scss
+++ b/src/templates/main/filmPage/_filmPage.scss
@@ -1,5 +1,17 @@
 .film-page {
-  width: 200px;
-  height: 200px;
-  background-color: red;
+  width: 100%;
 }
+
+.filmpage-poster {
+  margin-top: $header-size;
+  width: 100%;
+  height: $poster-size;
+  background-size: cover;
+  background-position: center;
+}
+
+.header-margin {
+  margin-top: $header-size;
+}
+
+
