feat: add film info table layout, styles

--- a/src/baseStyles/_variables.scss
+++ b/src/baseStyles/_variables.scss
@@ -19,7 +19,7 @@ $gap: 7px;
 //mixins
 @mixin content-container {
   max-width: 1100px;
-  margin: auto;
+  margin: auto auto $header-size auto;
   padding: 0 15px;
 }
 @mixin title {
