--- a/src/templates/main/filmPage/_filmPage.scss
+++ b/src/templates/main/filmPage/_filmPage.scss
@@ -26,8 +26,35 @@
     @include title;
     color: $dark-text;
   }
+}
 
+.materials {
+  display: grid;
+  grid-template-areas:
+    'video video mdl'
+    'grp big big';
+  gap: 10px;
+  width: 70%;
+  margin-left: auto;
 
+  & > div {
+    background-color: green;
+    width: 100%;
+    height: 200px;
+  }
+
+  &__trailer {
+    grid-area: video;
+  }
+  &__middle {
+    grid-area: mdl;
+  }
+  &__group {
+    grid-area: grp;
+  }
+  &__big {
+    grid-area: big;
+  }
 }
 
 
