--- a/src/templates/main/filmPage/_filmPage.scss
+++ b/src/templates/main/filmPage/_filmPage.scss
@@ -38,20 +38,32 @@
   margin-left: auto;
 
   & > div {
-    background-color: green;
     width: 100%;
     height: 200px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
   }
 
   &__trailer {
     grid-area: video;
+
   }
   &__middle {
     grid-area: mdl;
   }
   &__group {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
     grid-area: grp;
   }
+  &__group > div {
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+
   &__big {
     grid-area: big;
   }
