--- a/src/style.scss
+++ b/src/style.scss
@@ -30,6 +30,9 @@ body {
   @include content-container;
   display: flex;
   gap: $gap;
+  -webkit-box-shadow: 0px 5px 10px 2px rgba(86, 86, 86, 0.2);
+  -moz-box-shadow: 0px 5px 10px 2px rgba(86, 86, 86, 0.2);
+  box-shadow: 0px 5px 10px 2px rgba(86, 86, 86, 0.2);
 }
 
 .subtitle {
