--- a/src/templates/main/filmPage/_filmPage.scss
+++ b/src/templates/main/filmPage/_filmPage.scss
@@ -3,6 +3,7 @@
 
   &__header-margin {
     margin-top: $header-size;
+    margin-bottom: 20px;
   }
 
   &__th {
@@ -17,6 +18,7 @@
     width: 100%;
   }
   &__text {
+    padding-top: 15px;
     vertical-align: top;
   }
   &__column {
