--- a/src/baseStyles/_variables.scss
+++ b/src/baseStyles/_variables.scss
@@ -20,7 +20,7 @@ $gap: 7px;
 @mixin content-container {
   max-width: 1100px;
   margin: auto auto $header-size auto;
-  padding: 0 15px;
+  padding: 0 15px 40px;
 }
 @mixin title {
   color: $light-title;
