--- a/src/templates/main/filmPage/_filmPage.scss
+++ b/src/templates/main/filmPage/_filmPage.scss
@@ -42,9 +42,7 @@
   & > div {
     width: 100%;
     height: 200px;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+    @include background-positioning;
   }
 
   &__trailer {
