--- a/src/style.scss
+++ b/src/style.scss
@@ -4,6 +4,7 @@
 @import "templates/main/news/news";
 @import "./templates/main/films/films";
 @import "./templates/main/filmPage/filmPage";
+@import "templates/main/filmPage/series";
 @import "./templates/footer/footer";
 
 
