--- a/src/templates/main/filmPage/series.scss
+++ b/src/templates/main/filmPage/series.scss
@@ -1,5 +1,114 @@
 .episode {
   @include background-positioning;
-  width: 300px;
+  width: 32%;
   height: 200px;
+  border-bottom: $light-dark-text solid 10px;
+  padding: 10px;
+  box-sizing: border-box;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  cursor: pointer;
+
+
+  &::before {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color:rgba(0, 0, 0, .2);
+  }
+  & > * {
+    position: relative;
+    z-index: 1;
+  }
+
+  &__order {
+    @include title;
+    font-size: 15px;
+    text-decoration: underline;
+  }
+  &__rate {
+    background-color: $light-dark-text;
+    padding: 5px;
+    border-radius: 2px;
+    color: $light-title;
+    font-size: 12px;
+  }
+
+  &__order-and-rate {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__name {
+    color: $light-title;
+    font-size: 17px;
+  }
+
+  &__play {
+    width: 90px;
+    align-self: center;
+  }
+}
+.season {
+  margin-top: 50px;
+  max-height: 280px;
+  overflow: hidden;
+  position: relative;
+  padding-bottom: 25px;
+
+  &__series {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+    justify-content: space-between;
+    margin-top: 30px;
+  }
+
+  &__icon {
+    width: 35px;
+  }
+
+  &__title-container {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__title {
+    @include title;
+    color: $dark-text;
+  }
+
+  &__button {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    background: none;
+    border: none;
+  }
+
+  &__show-more {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    z-index: 2;
+    background: none;
+    border: none;
+    cursor: pointer;
+  }
+  &__back-arrow {
+    width: 100%;
+    height: 23px;
+    position: absolute;
+    bottom: 0;
+    background-color: white;
+    z-index: 1;
+  }
 }
