--- a/src/components/modals/videoplayer/style.scss
+++ b/src/components/modals/videoplayer/style.scss
@@ -18,7 +18,7 @@
   width: 100%;
   height: 100%;
 
-  .track-subtitle {
+  &::-webkit-media-text-track-display {
     font-size: var(--subtitle-font-size);
   }
 }
@@ -267,7 +267,7 @@
       background-repeat: no-repeat;
       margin-right: 5px;
 
-      &-subtitle {
+      &-size {
         background-image: url(./../../assets/icons/subtitle-settings.svg);
       }
 
