--- a/src/components/modals/videoplayer/style.scss
+++ b/src/components/modals/videoplayer/style.scss
@@ -14,6 +14,53 @@
   &.hide-interface {
     cursor: none;
   }
+
+  &-icon-center {
+    display: none;
+    pointer-events: none;
+    position: absolute;
+    height: 60px;
+    width: 60px;
+    top: 50%;
+    left: 50%;
+    background-position: center;
+    background-repeat: no-repeat;
+    transform: translate(-50%, -50%);
+    animation: scale-icon 1s ease;
+
+    &.play {
+      background-image: url(../../assets/icons/play.svg);
+    }
+
+    &.pause {
+      background-image: url(../../assets/icons/pause.svg);
+    }
+
+    &.skip-forward {
+      background-image: url(../../assets/icons/skip-forward.svg);
+    }
+
+    &.skip-backward {
+      background-image: url(../../assets/icons/skip-backward.svg);
+    }
+
+    &.skip-backward {
+      background-image: url(../../assets/icons/volume-muted.svg);
+    }
+
+    @keyframes scale-icon {
+      0% {
+        opacity: 1;
+        transform: translate(-50%, -50%);
+      }
+
+      100% {
+        opacity: 0;
+        transform: translate(-50%, -50%) scale(3);
+      }
+    }
+
+  }
 }
 
 .video {
