--- a/src/baseStyles/_variables.scss
+++ b/src/baseStyles/_variables.scss
@@ -40,3 +40,15 @@ $gap: 7px;
   background-repeat: no-repeat;
   background-position: center;
 }
+@mixin blackout {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color:rgba(0, 0, 0, .2);
+}
