--- a/src/templates/main/films/_films.scss
+++ b/src/templates/main/films/_films.scss
@@ -16,16 +16,7 @@
   }
 
   &__big-element::before {
-    	content: '';
-    	display: block;
-    	width: 100%;
-    	height: 100%;
-    	position: absolute;
-    	top: 0;
-    	left: 0;
-    	right: 0;
-    	bottom: 0;
-    	background-color:rgba(0, 0, 0, .2);
+    	@include blackout;
   }
   &__big-element > * {
     position: absolute;
