feat: add change film

--- a/src/style.scss
+++ b/src/style.scss
@@ -16,3 +16,13 @@ body {
 button {
   border: none;
 }
+
+.btn-film {
+  padding: 10px;
+  border: 1px solid black;
+  cursor: pointer;
+}
+
+.modal {
+  display: none;
+}
