--- a/src/style.scss
+++ b/src/style.scss
@@ -43,3 +43,12 @@ button {
 @include subtitle;
 }
 
+.navigation {
+  display: flex;
+  gap: 10px;
+  margin-top: calc($header-size + 30px);
+  &__item {
+    cursor: pointer;
+  }
+}
+
