--- a/src/templates/main/filmPage/_filmPage.scss
+++ b/src/templates/main/filmPage/_filmPage.scss
@@ -163,26 +163,41 @@
 
 .comments {
   margin-top: 50px;
+
   &__title {
     @include title;
     color: $dark-text;
     margin-bottom: 15px;
   }
+
   &__form {
     margin-top: 10px;
   }
+
   &__textarea {
     padding: 15px;
     background-color: #eaeaea;
     border: none;
     min-width: 70%;
   }
+
   &__button {
     border: none;
     padding: 0 10px;
     display: block;
     margin-top: 10px;
   }
+
+  &__error {
+    color: #c50000;
+    font-size: 12px;
+    margin: 5px 0;
+    display: none;
+  }
 }
+  .show {
+    display: block;
+  }
+
 
 
