--- a/src/templates/main/filmPage/_filmPage.scss
+++ b/src/templates/main/filmPage/_filmPage.scss
@@ -176,7 +176,7 @@
 
   &__textarea {
     padding: 15px;
-    background-color: #eaeaea;
+    background-color: $neutral-light-color;
     border: none;
     min-width: 70%;
   }
@@ -199,5 +199,30 @@
     display: block;
   }
 
+.comment {
+  border: 4px solid $neutral-light-color;
+  max-width: 70%;
+  padding: 11px;
+  margin: 15px 0;
+  &__name {
+    font-size: 18px;
+    margin: 10px 0;
+  }
+  &__body {
+    margin: 5px 0;
+    height: 100%;
+    overflow-wrap: break-word;
+  }
+  &__avatar {
+    width: 40px;
+    height: 40px;
+    border-radius: 40px;
+  }
+  &__person {
+    display: flex;
+    gap: 5px;
+    align-items: center;
+  }
+}
 
 
