--- a/src/baseStyles/_variables.scss
+++ b/src/baseStyles/_variables.scss
@@ -5,6 +5,8 @@ $light-title: white;
 $dark-text: #252525;
 $light-dark-text: #9b9b9b;
 $accent-color: #5ac2f1;
+$neutral-light-color: #eaeaea;
+$user-name-color: #00abce;
 
 //fonts
 $main-font: 400 16px 'Raleway', sans-serif;
