--- a/src/style.scss
+++ b/src/style.scss
@@ -23,7 +23,6 @@ button {
   border-radius: $border-radius;
   min-width: 70px;
   color: $light-title;
-  cursor: pointer;
 
   &:hover {
     background-color: #59bcee;
@@ -38,6 +37,7 @@ button {
 .wrapper {
   @include content-container;
   display: flex;
+  padding-top: $header-size;
   gap: $gap;
   -webkit-box-shadow: 0px 5px 10px 2px rgba(86, 86, 86, 0.2);
   -moz-box-shadow: 0px 5px 10px 2px rgba(86, 86, 86, 0.2);
@@ -46,4 +46,8 @@ button {
 
 .subtitle {
   @include subtitle;
+}
+
+.navigation {
+  padding: 20px 0 15px 20px;
 }
