--- a/src/templates/header/_header.scss
+++ b/src/templates/header/_header.scss
@@ -11,6 +11,8 @@
 
 .content-container {
   @include content-container;
+  margin: 0 auto;
+  padding: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
