--- a/src/templates/main/news/_news.scss
+++ b/src/templates/main/news/_news.scss
@@ -4,9 +4,9 @@
 
 .title {
   background-color: $title-background;
-  min-height: 30px;
+  // min-height: 30px;
   align-items: end;
-  padding: 30px 40px 20px;
+  padding: 20px 40px 20px;
   border-bottom: 7px solid white;
   display: flex;
   gap: 10px;
