--- a/src/style.scss
+++ b/src/style.scss
@@ -1,6 +1,7 @@
 @import "./baseStyles/normalize.css";
 @import "./baseStyles/variables";
 @import "./templates/header/header";
+@import "components/modals/authorization/authorization";
 @import "templates/main/news/news";
 @import "./templates/main/films/films";
 @import "./templates/main/filmPage/filmPage";
@@ -10,6 +11,7 @@
 
 body {
   font: $main-font;
+  position: relative;
 }
 button {
   cursor: pointer;
@@ -50,5 +52,13 @@ button {
   &__item {
     cursor: pointer;
   }
+}
+.background {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-color: black;
+  opacity: 60%;
+  z-index: 102;
 }
 
