--- a/src/templates/main/userPage/_user-page.scss
+++ b/src/templates/main/userPage/_user-page.scss
@@ -2,16 +2,22 @@
   padding: 30px 30px;
   box-shadow: 0 10px 24px rgb(0 0 0 / 36%);
 
+  &__titles {
+    margin-bottom: 32px;
+  }
+
   &__container {
     width: 100%;
   }
 
+  &__content {
+    &>div:not(:first-child) {
+      margin-top: 40px;
+    }
+  }
+
   .serial {
     position: relative;
-
-    &+.serial {
-      margin-top: 20px;
-    }
 
     &__title-container {
       display: flex;
