feat: transition theme button

--- a/src/style.scss
+++ b/src/style.scss
@@ -5,6 +5,7 @@
 @import "./templates/main/films/films";
 @import "./templates/main/filmPage/filmPage";
 @import "templates/main/filmPage/series";
+@import "components/themes/themeElement";
 @import "./templates/footer/footer";
 
 
