--- a/src/components/themes/_themeElement.scss
+++ b/src/components/themes/_themeElement.scss
@@ -11,10 +11,15 @@
     border-radius: 20px;
     background-color: rgb(255, 255, 255);
     position: absolute;
+    right: 24px;
     top: 50%;
     margin: -10px 4px 0;
+    transition: right 0.1s ease-in;
   }
 }
 .dark {
   right: 0;
+}
+.theme-active {
+  background-color: $accent-color;
 }
