--- a/src/baseStyles/_variables.scss
+++ b/src/baseStyles/_variables.scss
@@ -7,10 +7,13 @@ $light-dark-text: #9b9b9b;
 $accent-color: #5ac2f1;
 $neutral-light-color: #eaeaea;
 $user-name-color: #00abce;
+$card-background: rgba(0, 0, 0, .4);
+$card-font-color: #f9f9f9;
 
 //fonts
 $main-font: 400 16px 'Raleway', sans-serif;
 $title-font: 600 16px 'Oswald', sans-serif;
+$title-font-card: 400 32px 'Bebas Neue', cursive;
 
 //sizes
 $header-size: 50px;
