feat: render favorite persons

--- a/src/baseStyles/_variables.scss
+++ b/src/baseStyles/_variables.scss
@@ -13,7 +13,7 @@ $card-font-color: #f9f9f9;
 //fonts
 $main-font: 400 16px 'Raleway', sans-serif;
 $title-font: 600 16px 'Oswald', sans-serif;
-$title-font-card: 400 32px 'Bebas Neue', cursive;
+$title-font-card: 600 32px 'Oswald', sans-serif;
 
 //sizes
 $header-size: 50px;
