--- a/src/style.scss
+++ b/src/style.scss
@@ -66,6 +66,11 @@ button {
     @include title;
     color: $light-dark-text;
     cursor: pointer;
+    transition: all .3 ease;
+
+    &:hover {
+      color: $user-name-color;
+    }
   }
 }
 
