--- a/src/templates/main/userPage/_user-page.scss
+++ b/src/templates/main/userPage/_user-page.scss
@@ -82,6 +82,70 @@
       flex-wrap: wrap;
     }
   }
+
+  .profile {
+    &-container {
+      text-align: center;
+      font-size: 20px;
+
+      &>div {
+        margin-bottom: 10px;
+      }
+    }
+
+    &__avatar {
+      width: 170px;
+      height: 200px;
+      border-radius: 50%;
+      margin: 0 auto;
+
+      &-img {
+        width: 100%;
+      }
+    }
+
+    &__name {
+      font-size: 34px;
+      padding-bottom: 20px;
+    }
+
+    &__edit {
+      width: 32px;
+      height: 32px;
+      background-color: inherit;
+      background-image: url(./../../../components/assets/icon-pen.svg);
+      background-position: center;
+      border: none;
+    }
+
+    &__bottom {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 30px 40px 10px;
+
+      &-btn {
+        height: 32px;
+        line-height: 32px;
+        border: none;
+        background-color: inherit;
+        display: flex;
+        align-items: center;
+        padding-bottom: 6px;
+        transition: all 0.3 ease;
+
+        &:hover {
+          border-bottom: 4px solid $user-name-color;
+        }
+      }
+
+      &-img {
+        width: 32px;
+        height: 32px;
+        margin-right: 10px;
+      }
+    }
+  }
 }
 
 .card-info {
