--- a/src/baseStyles/_variables.scss
+++ b/src/baseStyles/_variables.scss
@@ -6,6 +6,8 @@ $dark-text: #252525;
 $light-dark-text: #9b9b9b;
 $accent-color: #5ac2f1;
 $neutral-light-color: #eaeaea;
+$dark-theme-background: $dark-text;
+$dark-theme-font-color: $light-dark-text;
 
 //fonts
 $main-font: 400 16px 'Raleway', sans-serif;
