--- a/src/style.scss
+++ b/src/style.scss
@@ -7,6 +7,7 @@
 @import "./templates/main/filmPage/filmPage";
 @import "templates/main/filmPage/series";
 @import "components/themes/themeElement";
+@import "components/themes/themes";
 @import "./templates/footer/footer";
 
 
