fix: move style for dark theme to mail style file

--- a/src/style.scss
+++ b/src/style.scss
@@ -96,3 +96,8 @@ button {
 .open {
   color: $dark-text;
 }
+
+.dark-theme {
+  background-color: $dark-theme-background;
+  color: $dark-theme-font-color;
+}
