--- a/src/templates/main/userPage/_user-page.scss
+++ b/src/templates/main/userPage/_user-page.scss
@@ -2,7 +2,7 @@
 @import './../../../baseStyles/fonts';
 
 .user-page {
-  padding: 30px 30px;
+  padding: 0px 30px;
 
   &__titles {
     margin-bottom: 32px;
@@ -92,17 +92,6 @@
       }
     }
 
-    &__avatar {
-      width: 170px;
-      height: 200px;
-      border-radius: 50%;
-      margin: 0 auto;
-
-      &-img {
-        width: 100%;
-      }
-    }
-
     &__name {
       font-size: 34px;
       padding-bottom: 20px;
@@ -144,6 +133,17 @@
         margin-right: 10px;
       }
     }
+  }
+}
+
+.profile__avatar {
+  width: 170px;
+  height: 200px;
+  border-radius: 50%;
+  margin: 0 auto;
+
+  &-img {
+    width: 100%;
   }
 }
 
